@@ -4,6 +4,10 @@ Griffith ChangeLog
 ------------------
 (c) 2005 Vasco Nunes
 
+
+2005-11-07 Vasco Nunes <vasco.m.nunes@gmail.com>
+	* Big posters fetched from Amazon are now previewed on built-in poster viewer.
+
 2005-11-05 Piotr Ozarowski <ozarow@gmail.com>
 	* Media names are now stored in database
 	* Updated polish translation
